[package]
name = "bevy_jam_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_entitiles = "0.2.2"
bevy_prng = {version = "0.2.0", features = ["rand_chacha"] }
bevy_rand = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
